--- a/monopalace/src/m/inc/_head.html
+++ b/monopalace/src/m/inc/_head.html
@@ -39,8 +39,9 @@
 
     <!-- http://static.monopalace.com/ -->
     <!-- fonts -->
-    <link rel="stylesheet" href="../../static/fonts/notosanskr/notosanskr.css">
-    <link rel="stylesheet" href="../../static/fonts/nanumgothic/nanumgothic.css">
+    <!-- <link rel="stylesheet" href="../../static/fonts/notosanskr/notosanskr.css">
+    <link rel="stylesheet" href="../../static/fonts/nanumgothic/nanumgothic.css"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="../../static/fonts/mdi/css/materialdesignicons.min.css"> -->
     <!-- css -->
     <link rel="stylesheet" href="http://static.monopalace.com/css/reset.css">
@@ -49,7 +50,8 @@
     <!-- <link rel="stylesheet" href="http://static.monopalace.com/css/common.min.css"> -->
     <!-- <link rel="stylesheet" href="http://static.monopalace.com/css/contents.min.css"> -->
     <link rel="stylesheet" href="http://static.monopalace.com/css/libs/prettyPhoto.css">
-    <link rel="stylesheet" href="http://static.monopalace.com/css/m/landing/contents.min.css">
+    <!-- <link rel="stylesheet" href="http://static.monopalace.com/css/m/landing/contents.min.css"> -->
+    <link rel="stylesheet" href="../../static/css/m/landing/contents.min.css">
 
     <script type="text/javascript" src="http://static.monopalace.com/js/libs/jquery-1.12.1.min.js"></script>
 
