--- a/monopalace/src/www/landing/inquiry.html
+++ b/monopalace/src/www/landing/inquiry.html
@@ -9,18 +9,18 @@
                 </a>
             </h1>
 
-            <div id="navBar" class="nav-bar">
+            <div id="navbar" class="navbar">
                 <nav id="mainNav" class="main-nav">
                     <h1 class="sr-only">메인메뉴</h1>
                     <ul class="menu cf">
                         <li>
-                            <a href="#scroll_intro">상품소개</a>
-                        </li>
-                        <li>
-                            <a href="#scroll_place">프리미엄 입지환경</a>
+                            <a href="#scroll_premier">프리미엄 입지환경</a>
                         </li>
                         <li>
                             <a href="#scroll_sale">임대수익</a>
+                        </li>
+                        <li>
+                            <a href="#scroll_intro">상품소개</a>
                         </li>
                         <li>
                             <a href="#scroll_type">타입 및 특화시설</a>
@@ -49,8 +49,8 @@
                     <h1 class="title">
                         <img src="http://img.monopalace.com/landing/inquiry/visual/title.png" alt="충남아산의 명품 랜드마크 모노팰리스">
                     </h1>
+                    <img src="http://img.monopalace.com/landing/inquiry/visual/subtitle.png" alt="월세수익 확정 보장받는 수익형상품!">
                     <img src="http://img.monopalace.com/landing/inquiry/visual/advantages.png" alt="156세대, 최적의 교통환경, 프리미엄 입지환경, 저렴한 분양가, 월세 수익 연 500만원">
-                    <img src="http://img.monopalace.com/landing/inquiry/visual/subtext.png" alt="월세수익 확정 보장받는 수익형상품!">
                 </div>
                 <div class="bannerbar">
                     <div class="title-area">
@@ -67,6 +67,99 @@
         </div>
     </section>
     <!-- /.sec landing inquiry-visual-sec -->
+    <section class="sec landing inquiry-premier-sec" id="scroll_premier">
+        <div class="premier-wrapper">
+            <div class="premier-content group-f">
+                <h1 class="title-type1 title">
+                    <img src="http://img.monopalace.com/landing/inquiry/premier/title.png" alt="모노팰리스 분양 특급 프리미엄">
+                </h1>
+                <p class="subtitle-type1 subtitle">
+                    아산시 랜드마크! 특급 인기 소형아파트 모노팰리스! <br>
+                    <span class="c-brown">풍성한 생활인프라와 풍부한 임대수요까지!</span>
+                </p>
+                <div class="picture ta-center">
+                    <img src="http://img.monopalace.com/landing/inquiry/premier/img_1.png" alt="1호선 온양온천역 프리미엄 역세권">
+                    <img src="http://img.monopalace.com/landing/inquiry/premier/img_2.png" alt="풍부한 임대수요!">
+                    <img src="http://img.monopalace.com/landing/inquiry/premier/img_3.png" alt="쇼핑, 문화, 생활 인프라">
+                    <img src="http://img.monopalace.com/landing/inquiry/premier/img_4.png" alt="풍부한 교육환경, 의료시설 밀집">
+                    <img src="http://img.monopalace.com/landing/inquiry/premier/img_5.png" alt="살기 좋은 힐링 생활권">
+                    <img src="http://img.monopalace.com/landing/inquiry/premier/img_6.png" alt="최첨단 특화시설">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /.sec landing inquiry-premier-sec -->
+    <section class="sec landing inquiry-place-sec" id="scroll_place">
+        <div class="place-wrapper">
+            <div class="place-content group-f">
+                <h1 class="title-type1 title">
+                    <img src="http://img.monopalace.com/landing/inquiry/place/title.png" alt="프리이엄 입지환경">
+                </h1>
+                <p class="subtitle-type1 subtitle">
+                    아산시 최고의 자리에 교통, 생활, 교육, 자연 등 <br>
+                    <span class="c-brown">특급교통과 완벽한 인프라를 갖춘 명품 주거입지!</span>
+                </p>
+                <figure class="picture ta-center">
+                    <img src="http://img.monopalace.com/landing/inquiry/place/img_1.png" alt="모노팰리스 입지환경 약도">
+                </figure>
+                <p class="subtext">
+                    - 도보 7분거리 <span class="c-red fw-m">1호선 온양온천역으로 청량리, 광운대, 천안 등을 빠르게 이동</span> 가능<br>
+                    - <span class="c-red fw-m">이마트, 롯데마트, 롯데시네마, 온양전통시장</span> 등 편의시설이 잘 갖춰진 주거환경<br>
+                    - 도보 10분 거리 <span class="c-red fw-m">시외버스터미널, 코레일, 모노팰리스 바로앞 버스정류장</span><br>
+                    - 교통 여건이 잘 갖추어져 있는 <span class="c-red fw-m">아산 최고 입지</span><br>
+                </p>
+            </div>
+        </div>
+    </section>
+    <!-- /.sec landing inquiry-place-sec -->
+    <section class="sec landing inquiry-sale-sec" id="scroll_sale">
+        <div class="sale-wrapper">
+            <div class="sale-content group-f">
+                <h1 class="title-type1 title">
+                    <img src="http://img.monopalace.com/landing/inquiry/sale/title.png" alt="모노팰리스 파격 분양혜택">
+                </h1>
+                <figure class="picture ta-center">
+                    <img src="http://img.monopalace.com/landing/inquiry/sale/subtitle.png" alt="수익형 상품!">
+                </figure>
+                <figure class="picture ta-center">
+                    <img src="http://img.monopalace.com/landing/inquiry/sale/img_1.png" alt="수익형상품, 후분양상품, 안정성 UP">
+                    <a href="http://img.monopalace.com/landing/inquiry/pop_guarantee.jpg" rel="prettyPhoto[guarantee]" title="보증서" class="guarantee-btn">보증서 확인</a>
+                </figure>
+                <p class="subtitle-type1 subtitle">
+                    건축 시행사가 준공 후 5년동안 직접 임대운영중인 믿을 수 있는 후분양 상품입니다. <br>
+                    모노팰리스 방문하시고, <span class="c-yellow td-under">전실 만실로 돌아 가는 것을 확인하고 계약 하세요!!</span>
+                </p>
+            </div>
+        </div>
+        <div class="income-wrapper">
+            <div class="income-content group-f">
+                <h1 class="title-type1 title">
+                    <img src="http://img.monopalace.com/landing/inquiry/sale/income_title.png" alt="든든하다! 모노팰리스 임대수익">
+                </h1>
+                <p class="subtitle-type1 subtitle">
+                    시중 예금 금리 인하, <span class="c-skyblue">평균 시중은행 예금 금리 1% 수준</span> <br>
+                    <span class="c-red">저금리 시대 최고의 수익률<i>!</i></span>
+                </p>
+                <figure class="picture ta-center">
+                    <img src="http://img.monopalace.com/landing/inquiry/sale/income_img_1.png" alt="1억 시중은행 예금상품 예치시 연 이자 1059950원">
+                    <img src="http://img.monopalace.com/landing/inquiry/sale/income_img_2.png" alt="모노팰리스 분양시 임대수익 5000000원 5년무조건">
+                </figure>
+                <figure class="picture-2 ta-center">
+                    <img src="http://img.monopalace.com/landing/inquiry/sale/income_bn_1.png" alt="실수입 보장" class="bn-1">
+                </figure>
+                <p class="subtext">
+                    ※ 실제 수익률 및 대출금액은 개인신용에 따라 변동 될 수 있습니다.
+                </p>
+            </div>
+            <div class="banner-wrapper">
+                <div class="banner-content group-f">
+                    <p>망설일 이유 없는 확실한 투자처!</p>
+                    <p><span class="c-blue">월세수익 연 480만원 X 5년 동안</span> <span class="c-red-dark">= 총 2,400만원 지급 보증</span></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /.sec landing inquiry-income-sec -->
     <section class="sec landing inquiry-intro-sec" id="scroll_intro">
         <div class="intro-wrapper">
             <div class="intro-content group-f">
@@ -124,92 +217,6 @@
         </div>
     </section>
     <!-- /.sec landing inquiry-intro-sec -->
-    <section class="sec landing inquiry-place-sec" id="scroll_place">
-        <div class="place-wrapper">
-            <div class="place-content group-f">
-                <h1 class="title-type1 title">
-                    <img src="http://img.monopalace.com/landing/inquiry/place/title.png" alt="프리이엄 입지환경">
-                </h1>
-                <p class="subtitle-type1 subtitle">
-                    아산시 최고의 자리에 교통, 생활, 교육, 자연 등 <br>
-                    <span class="c-brown">특급교통과 완벽한 인프라를 갖춘 명품 주거입지!</span>
-                </p>
-                <figure class="picture ta-center">
-                    <img src="http://img.monopalace.com/landing/inquiry/place/img_1.png" alt="모노팰리스 입지환경 약도">
-                </figure>
-                <p class="subtext">
-                    - 보도 7분거리 <span class="c-red">1호선 온양온천역으로 청량리, 광운대, 천안 등을 빠르게 이동</span> 가능<br>
-                    - <span class="c-red">이마트, 롯데마트, 롯데시네마, 온양전통시장</span> 등 생활 편의시설이 잘 갖춰진 주거환경<br>
-                    - 보도 10분 거리 <span class="c-red">시외버스터미널, 코레일, 모노팰리스 바로앞 버스정류장</span><br>
-                    - 교통 여건이 잘 갖추어져 있는 <span class="c-red">아산 최고 입지</span><br>
-                </p>
-            </div>
-        </div>
-    </section>
-    <!-- /.sec landing inquiry-place-sec -->
-    <section class="sec landing inquiry-premier-sec">
-        <div class="premier-wrapper">
-            <div class="premier-content group-f">
-                <h1 class="title-type1 title">
-                    <img src="http://img.monopalace.com/landing/inquiry/premier/title.png" alt="모노팰리스 분양 특급 프리미엄">
-                </h1>
-                <p class="subtitle-type1 subtitle">
-                    아산시 랜드마크! 특급 인기 소형아파트 모노팰리스! <br>
-                    <span class="c-brown">풍성한 생활인프라와 풍부한 임대수요까지!</span>
-                </p>
-                <div class="picture ta-center">
-                    <img src="http://img.monopalace.com/landing/inquiry/premier/img_1.png" alt="1호선 온양온천역 프리미엄 역세권">
-                    <img src="http://img.monopalace.com/landing/inquiry/premier/img_2.png" alt="풍부한 임대수요!">
-                    <img src="http://img.monopalace.com/landing/inquiry/premier/img_3.png" alt="쇼핑, 문화, 생활 인프라">
-                    <img src="http://img.monopalace.com/landing/inquiry/premier/img_4.png" alt="풍부한 교육환경, 의료시설 밀집">
-                    <img src="http://img.monopalace.com/landing/inquiry/premier/img_5.png" alt="살기 좋은 힐링 생활권">
-                    <img src="http://img.monopalace.com/landing/inquiry/premier/img_6.png" alt="최첨단 특화시설">
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- /.sec landing inquiry-premier-sec -->
-    <section class="sec landing inquiry-sale-sec" id="scroll_sale">
-        <div class="sale-wrapper">
-            <div class="sale-content group-f">
-                <h1 class="title-type1 title">
-                    <img src="http://img.monopalace.com/landing/inquiry/sale/title.png" alt="모노팰리스 파격 분양혜택">
-                </h1>
-                <p class="subtitle-type1 subtitle">
-                    <img src="http://img.monopalace.com/landing/inquiry/sale/subtitle.png" alt="수익형 상품!">
-                </p>
-                <figure class="picture ta-center">
-                    <img src="http://img.monopalace.com/landing/inquiry/sale/img_1.png" alt="수익형상품, 후분양상품, 안정성 UP">
-                    <a href="http://img.monopalace.com/landing/inquiry/pop_guarantee.jpg" rel="prettyPhoto[guarantee]" title="보증서" class="guarantee-btn">보증서 확인</a>
-                </figure>
-            </div>
-        </div>
-    </section>
-    <!-- /.sec landing inquiry-sale-sec -->
-    <section class="sec landing inquiry-income-sec" id="scroll_income">
-        <div class="income-wrapper">
-            <div class="income-content group-f">
-                <h1 class="title-type1 title">
-                    <img src="http://img.monopalace.com/landing/inquiry/income/title.png" alt="든든하다! 모노팰리스 임대수익">
-                </h1>
-                <p class="subtitle-type1 subtitle">
-                    시중 예금 금리 인하, <span class="c-blue-dark">평균 시중은행 예금 금리 1% 수준</span> <br>
-                    <span class="c-red-dark">저금리 시대 최고의 수익률<i>!</i></span>
-                </p>
-                <figure class="picture ta-center">
-                    <img src="http://img.monopalace.com/landing/inquiry/income/img_1.png" alt="1억 시중은행 예금상품 예치시 연 이자 1059950원">
-                    <img src="http://img.monopalace.com/landing/inquiry/income/img_2.png" alt="모노팰리스 분양시 임대수익 5000000원 5년무조건">
-                </figure>
-            </div>
-            <div class="banner-content group-f">
-                <p>망설일 이유 없는 확실한 투자처!</p>
-                <p><span class="c-blue">월세수익 연 480만원 X 5년 동안</span> <span class="c-red-dark">= 총 2,400만원 지급 보증</span></p>
-            </div>
-        </div>
-        <div class="banner-wrapper">
-        </div>
-    </section>
-    <!-- /.sec landing inquiry-income-sec -->
     <section class="sec landing inquiry-type-sec" id="scroll_type">
         <div class="type-wrapper">
             <div class="type-content group-f">
@@ -508,7 +515,7 @@
                             아산 지역의 산업단지내 고용인원은 약 31,500여명이며
                             <span class="c-blue">산업단지 내에는 삼성전자, 삼성SDI, 삼성디스플레이,
                                 LS산전,<br> 현대모비스 등 대기업이 대규 모로 분포</span>하고
-                            협력업체와 함께 입지하고 있습니다.<br>
+                            협력업체와 함께 입지하고 있습니다.
                             대규모 산업단지 직장인과 인근 대학교 학생 및 교직원 등
                             외부유입 세대는 꾸준히 증가하고 있습니다.
                         </p>
@@ -624,9 +631,9 @@
 <aside class="quick-menu" id="quickMenu" style="display: none">
     <h2 class="logo"><img src="http://img.monopalace.com/landing/inquiry/logo.png" alt="모노팰리스"></h2>
     <ul class="menu">
-        <li class="on"><a href="#scroll_intro"><span class="in">상품소개</span></a></li>
-        <li><a href="#scroll_place"><span class="in">프리미엄<br>입지환경</span></a></li>
+        <li><a href="#scroll_premier"><span class="in">프리미엄<br>입지환경</span></a></li>
         <li><a href="#scroll_sale"><span class="in">임대수익</span></a></li>
+        <li class="on"><a href="#scroll_intro"><span class="in">상품소개</span></a></li>
         <li><a href="#scroll_type"><span class="in">타입 및 특화시설</span></a></li>
         <li><a href="#scroll_plan"><span class="in">지역개발호재</span></a></li>
         <li><a href="#scroll_location"><span class="in">오시는 길</span></a></li>
@@ -663,7 +670,7 @@
                 <div class="modal-footer">
                     <button type="submit" class="ap-reset inquiry-btn">문의하기</button>
                     <a href="javascript:;" data-dismiss="modal" class="close-btn">
-                        <span class="x">&times;</span>
+                        <span class="x-cover"><span class="x">&times;</span></span>
                         <span class="txt">닫기</span>
                     </a>
                 </div>
@@ -671,6 +678,6 @@
         </div>
     </div>
 </div>
-<!-- /.modal-fstvisit -->
+<!-- /.inquiry-modal -->
 
 @@include('../inc/_foot.html')
