--- a/monopalace/src/m/inc/_foot.html
+++ b/monopalace/src/m/inc/_foot.html
@@ -10,7 +10,8 @@
 
 <!-- http://static.monopalace.com/ -->
 <script type="text/javascript" src="http://static.monopalace.com/js/m/script.js"></script>
-<script type="text/javascript" src="http://static.monopalace.com/js/m/ui.js"></script>
+<!-- <script type="text/javascript" src="http://static.monopalace.com/js/m/ui.js"></script> -->
+<script type="text/javascript" src="../../static/js/m/ui.js"></script>
 
 <!--[if lt IE 9]><script type="text/javascript" src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script> <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script> <![endif]-->
 
