--- a/monopalace/src/www/inc/_head.html
+++ b/monopalace/src/www/inc/_head.html
@@ -39,8 +39,9 @@
 
     <!-- ../static/ -->
     <!-- fonts -->
-    <link rel="stylesheet" href="../static/fonts/notosanskr/notosanskr.css">
-    <link rel="stylesheet" href="../static/fonts/nanumgothic/nanumgothic.css">
+    <!-- <link rel="stylesheet" href="../static/fonts/notosanskr/notosanskr.css">
+    <link rel="stylesheet" href="../static/fonts/nanumgothic/nanumgothic.css"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- css -->
     <link rel="stylesheet" href="../static/css/reset.css">
     <link rel="stylesheet" href="../static/fonts/mdi/css/materialdesignicons.min.css">
